--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ modules.xml
 
 ### MacOS ###
 .DS_Store
-
+**/.DS_Store
 
 ### VS Code ###
 .vscode/
@@ -39,4 +39,4 @@ logs/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-.DS_Store
+
