Theam fully working, not modified

--- a/VacationPlaner-WebApp/src/main/resources/application.properties
+++ b/VacationPlaner-WebApp/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-server.port=8081
-path.name = src/main/resources/dataFiles/Employee.json
+server.port=8080
+spring.web.resources.static-locations=file:/var/www/static,classpath:static
